--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ project.ext {
     artifact = 'microbench'
 
     bundleDir = "$buildDir/bundle"
-    groovyVersion = "2.0.5"
+    groovyVersion = "2.1.0-rc-3"
 }
 
 repositories {
@@ -16,7 +16,7 @@ repositories {
 }
 
 dependencies {
-    groovy group: 'org.codehaus.groovy', name: 'groovy', version: project.ext.groovyVersion
+    groovy group: 'org.codehaus.groovy', name: 'groovy-all', version: project.ext.groovyVersion
     groovy group: 'org.codehaus.gpars', name: 'gpars', version: "1.0.0-rc1"
 }
 
